updating swagger body
